language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_function_argument_label_does_not_include_other_function.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn replace(in string: String) -> String {\n  todo\n}\n\npub fn insert(in list: List(a)) -> List(a) {\n  todo\n}\n\npub fn main() {\n  replace(in: \"hello\")\n  insert(in: [])\n}\n"
---
-- app.gleam

pub fn replace(in string: String) -> String {
               ↑▔                            
  todo
}

pub fn insert(in list: List(a)) -> List(a) {
  todo
}

pub fn main() {
  replace(in: "hello")
          ▔▔          
  insert(in: [])
}
