language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_function_argument_label_from_definition.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn replace(in string: String, each pattern: String) -> String {\n  todo\n}\n\npub fn main() {\n  replace(in: \"hello\", each: \"l\")\n  replace(in: \"world\", each: \"o\")\n}\n"
---
-- app.gleam

pub fn replace(in string: String, each pattern: String) -> String {
               ↑▔                                                  
  todo
}

pub fn main() {
  replace(in: "hello", each: "l")
          ▔▔                     
  replace(in: "world", each: "o")
          ▔▔                     
}
