language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_function_argument_label_in_other_module.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.replace(in: \"hello\", each: \"l\")\n}\n"
---
-- wibble.gleam
pub fn replace(in string: String, each pattern: String) -> String {
               ▔▔                                                  
  todo
}


-- app.gleam

import wibble

pub fn main() {
  wibble.replace(in: "hello", each: "l")
                 ↑▔                     
}
