language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_function_from_unqualified_reference.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod.{wibble}\n\npub fn main() {\n  let value = wibble()\n  mod.wibble()\n  value\n}\n"
---
-- mod.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  wibble()
  ▔▔▔▔▔▔  
}


-- app.gleam

import mod.{wibble}
            ▔▔▔▔▔▔ 

pub fn main() {
  let value = wibble()
              ↑▔▔▔▔▔  
  mod.wibble()
      ▔▔▔▔▔▔  
  value
}
