language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_invalid_constant_todo_message_still_works.snap
---
source: language-server/src/tests/reference.rs
expression: "\nconst wibble = 1\nconst wobble = todo as wibble\n"
---
-- app.gleam

const wibble = 1
      ↑▔▔▔▔▔    
const wobble = todo as wibble
                       ▔▔▔▔▔▔
